# pose_graph_optimization

./: .gitignore  CMakeLists.txt  README.md
example/: main.cpp
include/: GraphConstraint.h  poseGraph.h
pose_graph/: GraphConstraint.h  GraphNode.h  PoseGraph.cpp  PoseGraph.h
src/: CMakeLists.txt  main.cpp
src/main_exe/: CMakeLists.txt
src/pose_graph/: CMakeLists.txt  GraphConstraint.cpp  GraphConstraint.h  PoseGraph.cpp  PoseGraph.h
src/utils/: Pose2D.cpp  Pose2D.h  math.h
utils/: CMakeLists.txt  LinkedList.h  Vector.h
